# flake8-cached

./: .gitignore  .mypy.ini  Makefile  README.md  mkdocs.yml  pyproject.toml  scent.py
.github/actions/setup/: action.yml
.github/workflows/: ci.yml
docs/about/: license.md
flake8_cached/: __init__.py  __main__.py  cacher.py  cli.py
forked_flake8_cached/: __init__.py  cacher.py  cli.py
tests/: conftest.py  test_cli.py
