[tool.poetry]
name = "forked-flake8-cached"
version = "0.0.3"
description = "A wrapper around flake8's cli that uses cache at file level"
authors = ["Noortheen Raja  <jnoortheen@gmail.com>", "yasu_umi <yasu.umi.19910101@gmail.com>"]

license = "MIT"

readme = "README.md"

homepage = "https://pypi.org/project/forked-flake8-cached"
repository = "https://github.com/Yasu-umi/forked-flake8-cached"

keywords = [
    "flake8"
]
classifiers = []

[tool.poetry.dependencies]
python = "^3.10"
flake8 = "^4.0.1"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
isort = "^5.10.1"
mypy = "^0.931"
types-setuptools = "^57.4.8"

[tool.poetry.scripts]
flake8-cached = "forked_flake8_cached.cli:main"

[tool.isort]
line_length = 120
multi_line_output = 3
lines_after_imports = 2
include_trailing_comma = true
overwrite_in_place = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
